# ann_with_cpp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  makefile
data/: traintX.csv  traintY.csv
libraries/: activationFunctions.cpp  activationFunctions.h  constants.h  dense.cpp  dense.h  mathFunctions.cpp  mathFunctions.h  matrix.cpp  matrix.h  matrixUtils.cpp  matrixUtils.h  neuralNetwork.cpp  neuralNetwork.h
libraries/functions/: activationFunctions.cpp  activationFunctions.h  mathFunctions.cpp  mathFunctions.h
libraries/layers/: dense.cpp  dense.h  layer.h  reluLayer.cpp  reluLayer.h  sigmoidLayer.cpp  sigmoidLayer.h  softmaxLayer.cpp  softmaxLayer.h  tanhLayer.cpp  tanhLayer.h
libraries/loss/: loss.h  mse.cpp  mse.h
libraries/optimizers/: adamOptimizer.cpp  adamOptimizer.h  optimizer.h  sgdOptimizer.cpp
